--- a/index.html
+++ b/index.html
@@ -105,11 +105,12 @@
         </button>
       </div>
     </section>
-    
+
     <!--seccion de contacto-->
     <section id="contacto" class="sectionContacto">
-      <h2>Contacto</h2>
-      <form>
+      <div id="contenedorContacto" class="contactoCartelEnviado"></div>
+      <h2 id="contactoH2">Contacto</h2>
+      <form id="formularioId">
         <div class="row mb-3 divBarraGral">
           <label for="nombre" class="col-sm-2 col-form-label"></label>
           <div class="col-sm-6">
@@ -140,7 +141,7 @@
         </div>
       </form>
     </section>
-  
+    
     <!--pie de pagina-->
     <footer> 
       <div class="container-fluid">
