avance con js carrito y form

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="barronativo, arte, emprender, artesanias, pottery, arte en barro, tazon, arte cordobes, vajilla, deco, decoracion, decohome, ensaladera, macrameart, ceramica, tazas, macetas, cuencos, teteras, artesanal, alfareria, mates, torno, producto artesanal, a mano">
     <meta name="description" content="Barronativo es un emprendimiento compuesto por dos personas que aman la ceramica y con ella hacen los mejores productos hechos con amor y con la mejor vision de la naturaleza. Encontra la taza, cuenco, mate o maceta que vaya con vos">
     <link rel="shortcut icon" href="./imgBarronativo2/logo-incom-faviconMod.jpg">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>BARRONATIVO</title>
 
     <!--Bootstrap CSS-->
@@ -19,6 +20,9 @@
 
     <!--CSS propio-->
     <link rel="stylesheet" href="./assets/css/estilos.css">
+
+    <!--JS sweet alert-->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
@@ -136,7 +140,7 @@
           </div>
         </div>
         <div class="divBotones">
-          <button type="submit" class="btn">Enviar</button>
+          <button id="botonEnviar" class="btn">Enviar</button>
           <button type="reset" class="btn">Resetear</button>
         </div>
       </form>
